# viaopt

./: CMakeLists.txt  NEWS  README.md
Matlab/colocation/: Affichage.m  AlphaChangeScale.m  AlphaOptimal.m  AlphaSlided.m  CostLin  CostLin.m  CostLinTpsVar.m  Parameters.m  PlotAfterControl.m  PlotAfterControlTry.m  PlotPartial.m  QA.m  Riccati.m  SolveTheta.m  Theta.m  ThetaNoPtrb.m  VectTimePlan.m  actuator.m  fcontrol.m  fcontrolbis.m  master.m  model.m
Matlab/colocation/Colocation figures/: collocation1.eps  collocation2.eps  collocation3.eps
Matlab/ilqg-spring/: Acc.m  DeriveesF.m  DeriveesL.m  DeriveesLInit.m  FU.m  FUInit.m  FX.m  FXInit.m  Initialisation.m  LU.m  LUU.m  LX.m  LXX.m  Value.m  Xcoherent.m  Xreel.m  debug.m  f.m  fInit.m  main.m  mainBis.m  mainEtatReel.m  theta.m  thetaCouple.m
Matlab/ilqg-spring/fig/: 10dT.eps  Commande en couple - Boucle fermée 5dT - Initialisation avec raideur fixe.eps  Commande en couple - Tcible 20 - avec initialisation.eps  Commande en couple - Tcible 20 - sans initialisation.eps  Commande en couple cible 20.eps  Fonction barriere.fig  commande en couple sur la position.eps  commande en position, cout sur B.eps  comportement.fig
Matlab/lqr/basic_lqr/: LQR_main.m  ThetaNoPtrb.m  functionLQR.m  functionLQRHorInf.m  main_LQR_boucle_de_retour.m  main_horizon_infini.m
Matlab/lqr/fig/control_couple/: Cas ideal - couple 200.eps  Cas ideal - couple 200.fig  Cas ideal Optimise - couple 200.eps  Feedback - couple 200.eps  Hor Inf - couple 200.eps  Hor Inf Optimise - couple 200.eps  Horizon infini Commande en couple.eps
Matlab/lqr/fig/noise/: Bruit sur etat 10  k et k variable- feedback.eps  Bruit sur etat 10  k et k variable- hor inf.eps  Bruit sur etat 10 - feedback.eps  Bruit sur etat 10 - hor inf.eps  Bruit sur etat 5  k et k variable- hor inf.eps  Bruit sur etat 5 - feedback.eps  Bruit sur etat 5 - hor inf.eps  Bruit sur rigidite 5000 - feedback.eps  Bruit sur rigidite 5000 - hor inf.eps  Variation k cas ideal.eps  Variation k feedback.eps  Variation k hor inf.eps  k biaise.eps
Matlab/lqr/fig/torque_control/: Impact Hor Inf Cos.eps  Impact Hor Inf Neg.eps  Impact Hor Inf.eps  LQR.m  LQR_main.m  ThetaNoPtrb.m  essai.m  functionLQR.m  functionLQRHorInf.m  horInf.m  main_LQR_boucle_de_retour.m  main_horizon_infini.m
Matlab/lqr/vsa_couple_defunc/: LQR_main.m  ThetaNoPtrb.m  functionLQR.m  functionLQRHorInf.m  main_LQR_boucle_de_retour.m  main_horizon_infini.m
Matlab/lqr/vsa_position/: Hor Inf VSA.eps  ThetaNoPtrb.m  functionLQRHorInf.m  main_horizon_infini.m
Matlab/other/iLQG/: Qu.m  Quu.m  Qux.m  Qx.m  Qxx.m  Solutio.m  Theta.m  V.m  Vx.m  Vxx.m  commande_exp.m  f.m  fu.m  fx.m  l.m  lu.m  lu_.m  luu.m  lux.m  lx.m  lxx.m  mainiLQG.m
Matlab/other/iLQG-position/: Lu.m  Luu.m  Lx.m  Lxx.m  Solution.m  Theta.m  f.m  fu.m  fx.m  main.m
src/: #model-awas.hpp#  CMakeLists.txt  api.hpp  api.hpp.gch  ilqr.hpp  ilqr.hpp.gch  ilqr.t.cpp  integrator-rk4.hpp  integrator-rk4.hpp.gch  integrator-rk4.t.cpp  integrator.hpp  integrator.hpp.gch  model-abstract.cpp  model-abstract.hpp  model-abstract.hpp.gch  model-awas.cpp  model-awas.hpp  model-awas.hpp.gch
tmp/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  viaopt.pc
tmp/cmake/: cmake_uninstall.cmake
tmp/doc/: Doxyfile  Doxyfile.extra
tmp/include/viaopt/: api.hpp  config.hh  deprecated.hh  ilqr.hpp  ilqr.t.cpp  integrator-rk4.hpp  integrator-rk4.t.cpp  model-abstract.hpp  model-awas.hpp  warning.hh
tmp/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libviaopt.so.0.0-1-g35f5-dirty
tmp/unitTesting/: CTestTestfile.cmake  Makefile  cmake_install.cmake
unitTesting/: CMakeLists.txt  tcloseloop.cpp  tfunctions.cpp  tilqr.cpp  tmodel.cpp
