#
#  Copyright 2013 CNRS
#

ADD_DEFINITIONS(-DDEBUG=2)
IF(WIN32)
	ADD_DEFINITIONS("-DNOMINMAX")
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)

# --- tmodel ---
SET(EXECUTABLE_NAME tmodel)
ADD_EXECUTABLE(${EXECUTABLE_NAME} 
  tmodel.cpp)
LIST (APPEND executable_list ${EXECUTABLE_NAME})
ADD_TEST(${EXECUTABLE_NAME} ${EXECUTABLE_NAME})

# --- tilqr ---
SET(EXECUTABLE_NAME tilqr)
ADD_EXECUTABLE(${EXECUTABLE_NAME} 
  tilqr.cpp)
LIST (APPEND executable_list ${EXECUTABLE_NAME})
ADD_TEST(${EXECUTABLE_NAME} ${EXECUTABLE_NAME})

# --- tcloseloop ---
SET(EXECUTABLE_NAME tcloseloop)
ADD_EXECUTABLE(${EXECUTABLE_NAME} 
  tcloseloop.cpp)
LIST (APPEND executable_list ${EXECUTABLE_NAME})
ADD_TEST(${EXECUTABLE_NAME} ${EXECUTABLE_NAME})

# Compile all
foreach (exec ${executable_list})
	ADD_DEPENDENCIES(${exec} ${PROJECT_NAME})
	TARGET_LINK_LIBRARIES(${exec} ${PROJECT_NAME})
endforeach(exec)
